--- a/project/blocks/container/container.css
+++ b/project/blocks/container/container.css
@@ -1,17 +1,17 @@
 
-@media(min-width: 320px){
+@media(max-width: 320px){
     .container{
         max-width: 288px;
         margin: 0 auto;
     }
 }
-@media(min-width: 768px){
+@media(max-width: 768px){
     .container{
         max-width: 736px;
         margin: 0 auto;
     }
 }
-@media(min-width: 1120px){
+@media(max-width: 1120px){
     .container{
         max-width: 1088px;
         margin: 0 auto;
